--- a/src/assets/Components/MultiEvent.scss
+++ b/src/assets/Components/MultiEvent.scss
@@ -1,12 +1,26 @@
 @use "sass:math";
-
+$default-font-size: 12px;
 $cellWidth: math.div(100%, 7);
 $spacing: 1%;
-$w: 8px;
-$hw: 4px;
-$h: 23px;
-
-
+$w: 18pt;
+$hw: 4pt;
+$h: 23pt;
+:root {
+  
+    font-size: $default-font-size;
+  
+    @media (min-width: 768px) {
+      font-size: $default-font-size *1.5;
+    }
+  
+    @media (min-width: 1024px) {
+      font-size: $default-font-size *2;
+    }
+  
+    @media (min-width: 1440px) {
+      font-size: $default-font-size *2.5;
+    }
+  }
 .multi-event {
     display: block;
     font-family: roboto;
@@ -28,7 +42,7 @@ $h: 23px;
             border-radius: 50%;
             background-color: #f1f1f1;
             color: #6b7280;
-            font-size: 13px;
+            font-size: 1rem;
             cursor: pointer;
             transition: all 0.4s;
 
@@ -72,8 +86,8 @@ $h: 23px;
 
             &.day-name {
                 background-color: #fff;
-                color: #718096;
-                font-size: 12px;
+                color: #a5b9d8;
+                font-size: 1.3rem;
                 cursor: default;
             }
 
@@ -177,8 +191,8 @@ $h: 23px;
                     i.dot {
                         // border: 1px solid rgb(116, 116, 116);
                         position: absolute;
-                        width: 5px;
-                        height:5px;
+                        width: .5rem;
+                        height:.5rem;
                         border-radius:50%;
                         left: -$hw;
                         top: -$hw;
